2003-05-28  Paul Eggert  <eggert@twinsun.com>

	Assume the headers required for C89 freestanding compilers.
	* addext.c, backupfile.c, fsusage.c, human.c, pathmax.h,
	rpmatch.c, userspec.c, xreadlink.c, xstrtol.c: Include <limits.h>
	without checking for HAVE_LIMITS_H.
	* backupfile.c, fsusage.c, hash.c, human.c, safe-read.c, userspec.c,
	xstrtol.c (CHAR_BIT) : Don't define, since <limits.h> is guaranteed
	to do that.
	* fatal.c: Include <stdarg.h> without checking for __STDC__.
	* exclude.c: Include <stdbool.h> unconditionally.
	* tempname.c: Include <stddef.h> unconditionally.
	* hash.c: Include <limits.h>, since we no longer define CHAR_BIT.
	* modechange.c, rpmatch.c (NULL): Don't define, since
	<stddef.h> does that.
	* quote.c: Dont include <stddef.h> or <sys/types.h>; not needed.
	* safe-read.c (INT_MAX): Don't define, since <limits.h> does that.
	* safe-read.c (TYPE_MINIMUM, TYPE_MAXIMUM): Remove; no longer needed.
	* xstrtol.c: Likewise.
	* safe-read.c: Remove TYPE_SIGNED; no longer needed.
	* savedir.c: Include <stddef.h> instead of defining NULL.

	* addext.c (addext): Use assignment rather than cast, to avoid
	warnings on some platforms.

	* mktime.c (__mktime_internal): Do not reject negative timestamps
	arbitrarily.

2003-05-10  Bruno Haible  <bruno@clisp.org>

	* linebreak.c (iconv_string_length): Don't return -1 just because the
	string is longer than 4 KB.

2003-05-12  Jim Meyering  <jim@meyering.net>

	* strftime.c (my_strftime): Let the `-' (no-pad) flag affect
	the space-padded-by-default conversion specifiers, %e, %k, %l.

2003-05-03  Bruno Haible  <bruno@clisp.org>

	Upgrade to Unicode-4.0.
	* linebreak.c (nonspacing_table_data): Change width of U+00AD,
	U+0350..U+0357, U+035D..U+035F, U+0600..U+0603, U+0610..U+0615,
	U+0656..U+0658, U+0A01, U+0AE2..U+0AE3, U+0CBC, U+17B4..U+17B5,
	U+17DD, U+1920..U+1922, U+1927..U+192B, U+1932, U+1939..U+193B
	from 1 to 0. Change width of U+0CBF, U+0CC6, U+180E from 0 to 1.